crates/keron-lang/tests/corpus/errors/parse/missing_type.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: found '=' expected something else, '#', or ':'
  --> 1:7
  |
1 | val a = 1
  |       ^
